Fixed broken layout of "new article" radio buttons.
https://www.pivotaltracker.com/story/show/31904687

--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -385,7 +385,11 @@ hgroup {
 .field {
   margin-bottom: 20px;
   input {
-    width: 95%; }
+    width: 95%;
+    &[type=checkbox], &[type=radio] {
+      width: auto;
+    }
+  }
   textarea {
     width: 95%;
     &.tall {
